# ninja-bot

./: .gitignore  README.md  env.json  pom.xml  pyproject.toml  template.yaml
.github/workflows/: build.yml  ci.yml  deploy-bot.yml  main.yml  native-linux.yml  native-macos.yml  native-windows.yml  native.yml  python-package.yml  sonar.yml
ninja_bot/: README.md  cdk.json  package-lock.json  package.json
ninja_bot/lib/: ninja_bot-stack.ts
ninja_bot/src/: app.py
ninja_bot/test/: ninja_bot.test.ts
ninja_cli/: __init__.py  cli.py
ninja_cli/commands/: command_a.py  mkm.py
ninja_cli/utils/: config.py  mkm.py
src/main/java/command/: ExampleCommand.java
src/main/java/org/pubcoding/: NinjaCli.java
src/main/java/org/pubcoding/command/: ExampleCommand.java  ExampleSecondCommand.java  ShowSpellCommand.java
src/main/java/org/pubcoding/command/command/: ExampleCommand.java
src/main/java/org/pubcoding/dao/: EnchantmentDao.java
src/main/java/org/pubcoding/model/: Configuration.java  Enchantment.java  Errors.java  School.java
src/main/java/org/pubcoding/ninjacli/command/: ExampleCommand.java  (+2 more)
src/main/java/org/pubcoding/runner/: Runner.java
src/main/java/org/pubcoding/util/: ConfigurationLoader.java
src/main/resources/: application.yml  dnd.db  log4j.properties
src/test/java/command/: ExampleCommandTest.java
src/test/java/org/pubcoding/command/: ExampleCommandTest.java  ShowSpellCommandTest.java
src/test/java/org/pubcoding/util/: ConfigurationLoaderTest.java
src/test/resources/: malformed-configuration.yml
tests/: test_cli.py
(+15 files in other folders)
